# do-app-platform-ai-dev-workflow

./: README.md  TEST_RESULTS_FILES.md  agent.md  build-locally.sh  workflow-check.sh
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  post-create.sh
.do/: deploy.template.yaml
hot-reload-template/: .gitignore  App_Platform_Commands.md  CLAUDE.md  CUSTOMIZATION.md  Dockerfile  HOT_RELOAD_FIX.md  HOT_RELOAD_PERFORMANCE.md  README.md  agent.md  app.yaml  hot_reload_results.md  hot_reload_timings.md
hot-reload-template/.do/: deploy.template.yaml
hot-reload-template/app-examples/: README.md
hot-reload-template/app-examples/blank-nodejs-template/: README.md  appspec.yaml  dev_startup.sh  index.js  package.json
hot-reload-template/app-examples/go-sample-app/: .env.example  README.md  appspec.yaml  dev_startup.sh  go.mod  main.go
hot-reload-template/app-examples/nextjs-sample-app/: .env.example  README.md  appspec.yaml  dev_startup.sh  package-lock.json  package.json
hot-reload-template/app-examples/nodejs-job-test/: .env.example  appspec.yaml  index.js
hot-reload-template/app-examples/python-fastapi-sample/: .env.example  .gitignore  README.md  appspec.yaml  dev_startup.sh  main.py  pyproject.toml
hot-reload-template/app-examples/rails-todo-app/: README.md  appspec.yaml
hot-reload-template/app-examples/ruby-rails-sample/: appspec.yaml
hot-reload-template/doctl_remote_exec/: README.md  doctl_remote_exec.py  main.py  pyproject.toml
hot-reload-template/scripts/: github-sync.sh  job-manager.sh  startup.sh
(+12 files in other folders)
